--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/express": "^5.0.0",
 		"compression": "^1.8.0",
 		"express": "^4.21.2",
-		"helmet": "^8.0.0"
+		"helmet": "^8.0.0",
+		"mongoose": "^8.12.1"
 	}
 }
